
v0.1.00
-------
Added text next to topLinks to standardise with Gibbon Core.
Fixed a bug with the drop down in issues_createTechnician.php not showing anyone.
Disabled feature to access Resolved issues because of a security issue.
Changed Submit Issue to Create Issue.
Change issues_submit.php to issues_create.php.
Change issues_submitProcess.php to issues_createProcess.php.
Fixed a bug with issues_manage_technicians.php where wrong data would be shown for technicians with no issues.
Added new Create For in issues_create.php where technicians can create issues on behalf of others.
Fixed truncated strings not being displayed correctly in issues_view.php.
Added new column to helpDeskIssue called createdByID.
Added notification sent to person if an issue was created on behalf of them.
Technicians can no longer accept their own issues.
Fixed technicians showing as technicians for their own issues.
Fixed technicians showing incorrect issues assigned to them in issues_manage_technicians.php.
Fixed people not being able to access their own issues.
Change background colour of technician post in issues_discuss_view.php.
Changed Issue Filter default to "All" if available.
Added notification for posting for issues_discuss_view.php.

v0.1.01
-------
Update broken in v0.1.00 fixed in this version.

v0.1.02
-------
Changed Student to Owner in issues_discuss_view.php.
Changed Name to Owner in issues_view.php.
Changed drop down to order by surname, preferredName in issues_createTechnicians.php.
Changed drop down to show surname, preferredName in issues_createTechnicians.php.
Combined Date and Title and Owner and Category in issues_view.php.
Gave Admins full access to system.
Changed URLList of View issues_All and View issues_All&Assign to "issues_view.php, issues_discuss_view.php" and "issues_view.php, issues_assign.php, issues_discuss_view.php" respectively.
Changed technicianPosted to gibbonPersonID in table helpDeskIssueDiscuss.