@@ -42,6 +42,24 @@ else {
 	print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . _("Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . _(getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" . _('Create Issue') . "</div>" ;
 	print "</div>" ;
 
+	if (isset($_GET["addReturn"])) { $addReturn=$_GET["addReturn"] ; } else { $addReturn="" ; }
+	$addReturnMessage="" ;
+	$class="error" ;
+	if (!($addReturn=="")) {
+		if ($addReturn=="fail0") {
+			$addReturnMessage=_("You do not have access to this action.") ;	
+		}
+		else if ($addReturn=="fail1") {
+			$addReturnMessage=_("Your request failed because your inputs were invalid.") ;	
+		}
+		else if ($addReturn=="fail2") {
+			$addReturnMessage=_("Your request failed due to a database error.") ;	
+		}
+		print "<div class='$class'>" ;
+			print $addReturnMessage;
+		print "</div>" ;
+	} 
+
 	try {
 		$data=array(); 
 		$sql="SELECT * FROM gibbonSetting WHERE scope='Help Desk' AND name='issuePriority'" ;
