@@ -44,9 +44,6 @@ else {
 		else if ($updateReturn=="fail2") {
 			$updateReturnMessage=_("One or more of the fields in your request failed due to a database error.") ;	
 		}
-		else if ($updateReturn=="fail3") {
-			$updateReturnMessage=_("Your request failed because your inputs were invalid.") ;	
-		}
 		else if ($updateReturn=="success0") {
 			$updateReturnMessage=_("Your request was completed successfully.") ;	
 			$class="success" ;
